# HW_Sedov

.github/workflows/: ci.yml
05_hw/: CMakeLists.txt  README.md  benchmark_stack.c  stack.c  stack.h  test_stack.c
05_hw/coverage/: coverage.benchmark_stack.c.3c81c11ccd455e0259008913562c6c53.html  coverage.functions.html  coverage.html  coverage.main.c.2045016cb90d1e65d71c2407a2570927.html  coverage.stack.c.27b0142b837b3f76d9b10b485747d109.html  coverage.test_stack.c.c6ab9a0baad419593fad367426df44fb.html
